view complete modified:   templates/items.html modified:   view.py

--- a/templates/items.html
+++ b/templates/items.html
@@ -9,8 +9,8 @@
     <p><strong>ID:</strong> {{ items.id }}</p>
     <p><strong>Name:</strong> {{ items.name }}</p>
     <p><strong>Param1:</strong> {{ items.param1 }}</p>
-    <p><strong>Param2:</strong> ${{ items.param2 }}</p>
-    <p><strong>Param3:</strong> ${{ items.param3 }}</p>
+    <p><strong>Param2:</strong> {{ items.param2 }}</p>
+    <p><strong>Param3:</strong> {{ items.param3 }}</p>
     	{% endfor %}
     <hr>
     <h2>JSON Data</h2>
