--- a/templates/items.html
+++ b/templates/items.html
@@ -2,15 +2,18 @@
 <html>
 <head>
     <title>Items Detail</title>
+    <link rel="stylesheet" type="text/css" href="../static/items.css"/>
 </head>
 <body>
     <h1>Item Detail</h1>
-	{% for items in item %}
-    <p><strong>ID:</strong> {{ item.id }}</p>
-    <p><strong>Name:</strong> {{ item.name }}</p>
-    <p><strong>Param1:</strong> {{ item.param1 }}</p>
-    <p><strong>Param2:</strong> {{ item.param2 }}</p>
-    <p><strong>Param3:</strong> {{ item.param3 }}</p>
+	{% for item in items %}
+	<div>
+    		<p><strong>ID:</strong> {{ item.id }}</p>
+    		<p><strong>Name:</strong> {{ item.name }}</p>
+    		<p><strong>Param1:</strong> {{ item.param1 }}</p>
+    		<p><strong>Param2:</strong> {{ item.param2 }}</p>
+    		<p><strong>Param3:</strong> {{ item.param3 }}</p>
+    	</div>
     	{% endfor %}
     <hr>
     <h2>JSON Data</h2>
