--- a/templates/items.html
+++ b/templates/items.html
@@ -5,12 +5,12 @@
 </head>
 <body>
     <h1>Item Detail</h1>
-	{% for items in item %}
-    <p><strong>ID:</strong> {{ items.id }}</p>
-    <p><strong>Name:</strong> {{ items.name }}</p>
-    <p><strong>Param1:</strong> {{ items.param1 }}</p>
-    <p><strong>Param2:</strong> {{ items.param2 }}</p>
-    <p><strong>Param3:</strong> {{ items.param3 }}</p>
+	{% for item in items %}
+    <p><strong>ID:</strong> {{ item.id }}</p>
+    <p><strong>Name:</strong> {{ item.name }}</p>
+    <p><strong>Param1:</strong> {{ item.param1 }}</p>
+    <p><strong>Param2:</strong> {{ item.param2 }}</p>
+    <p><strong>Param3:</strong> {{ item.param3 }}</p>
     	{% endfor %}
     <hr>
     <h2>JSON Data</h2>
